--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -1,7 +1,7 @@
 
-$color-blue-one: #5496E6;
-$color-blue-two: #518BDE;
-$color-gray-one: #444;
+$color-blue-one:#ffff00 ;
+$color-blue-two:#ffa500 ;
+$color-gray-one: #000080e7;
 $color-gray-two: #E6E6E6;
 $color-yellow-one: #F7D754;
 
@@ -19,6 +19,8 @@ $font-mont: "Montserrat";
     &__title {
         grid-row: 1/2;
         grid-column: 1/4;
+   
+    
         
         justify-self: center;
         // align-self: center;
