update the color scheme

--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -1,9 +1,9 @@
 
-$color-blue-one:#ffff00 ;
-$color-blue-two:#ffa500 ;
-$color-gray-one: #000080e7;
-$color-gray-two: #E6E6E6;
-$color-yellow-one: #F7D754;
+$color-blue-one: rgba(1, 26, 3, 0.74); 
+$color-blue-two: rgb(0, 43, 0);
+$color-gray-one: #021d03e7;
+$color-gray-two: rgb(0, 43, 0);
+$color-yellow-one:  rgb(222, 222, 224) ;
 
 $font-roboto: "Roboto Condensed";
 $font-mont: "Montserrat";
