--- a/src/style/changeDate.scss
+++ b/src/style/changeDate.scss
@@ -7,7 +7,7 @@
     line-height: 19px;
     text-align: center;
     font-family: $font-roboto;
-    color: white;
+    color:rgb(222, 222, 224) ;
     font-weight: 100;
 
     background-color: transparent;
