--- a/src/style/clock.scss
+++ b/src/style/clock.scss
@@ -37,7 +37,7 @@
         font-size: 90px;
         font-weight: bold;
         line-height: 115px;
-        color: white;
+        color: rgb(222, 222, 224) ;
         font-family: "Roboto Condensed";
     }
 }
