--- a/src/style/picker.scss
+++ b/src/style/picker.scss
@@ -17,7 +17,7 @@
         text-align: center;
         border: none;
         background-color: transparent;
-        border-bottom: 2px solid #ffa500;
+        border-bottom: 2px solid #001135;
         &:focus {
             outline: none;
         }
